--- a/webb/index.html
+++ b/webb/index.html
@@ -27,7 +27,7 @@
   
    <p>. WWW är ett sammankopplat nätverk av webbplatser, dokument som kan nås via internet det är ett informationssystem och information kan nås via URL.</p>
   
-   <P>. URL är en forkortning av Uniform Resorce Locator URL är en åtkomstpunkt till ex en hemsida eller webbsida HTTPS WWW. ett URL identifierar webbsidor och platser och alla webbsidor har en unik URL som bestämmer åtkomstpunkten
+   <P>. URL är en forkortning av Uniform Resorce Locator URL är en åtkomstpunkt till ex en hemsida eller webbsida HTTPS WWW. ett URL identifierar webbsidor och platser alla webbsidor har en unik URL som bestämmer åtkomstpunkten
     URL berättar var man kommer behöver inte vara hemsider kan vara ex FTP FILE url bestämmer hur vart den ska öppna ifrån.
    </P>
   
