--- a/favoriter/index.html
+++ b/favoriter/index.html
@@ -16,8 +16,30 @@
         <button class="button3"><a href="undersidor/serie.html" target=blank>Serie</a></button>
     </div>
    
-<img class="center" src="https://media1.tenor.com/m/JR1cg6RbTjAAAAAd/tank-m60t.gif"center alt="">
 
 </body>
 
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rotating Cube CSS 3D Animation</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="cube">
+            <div class="face front"></div>
+            <div class="face back"></div>
+            <div class="face right"></div>
+            <div class="face left"></div>
+            <div class="face top"></div>
+            <div class="face bottom"></div>
+        </div>
+    </div>
+</body>
 </html>
