--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <a href="favoriter/index.html" target="”_blank”">
                     <h5>Favorit media</h5>
                 </a>
+                <a href="Recept/recept.html" target="”_blank”">
+                    <h5>Recept</h5>
+                </a>
 </h2>
 
 
