--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <a href="Recept/recept.html" target="”_blank”">
                     <h5>Recept</h5>
                 </a>
+                <a href="Javascript/index.html" target="”_blank”">
+                    <h6>Cookie clicker</h6>
+                </a>
+                <a href="Javascript/js.html" target="”_blank”">
+                    <h7>Mail</h7>
+                </a>
 </h2>
 
 
