--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 
 
 
-<h2>välkommen
+<h1>välkommen
     <link rel="stylesheet" href="index.css">
 
     <body>
 
         <a href="webb/index.html" target="”_blank”">
-            <h3>Webbens historia</h3>
+            <p>Webbens historia</p>
 
             <a href="pixar/pixar.html" target="”_blank”">
-                <h4>Pixar</h4>
+                <p>Pixar</p>
 
                 <a href="favoriter/index.html" target="”_blank”">
-                    <h5>Favorit media</h5>
+                    <p>Favorit media</p>
                 </a>
                 <a href="Recept/recept.html" target="”_blank”">
-                    <h5>Recept</h5>
+                    <p>Recept</p>
                 </a>
                 <a href="Javascript/index.html" target="”_blank”">
-                    <h6>Cookie clicker</h6>
+                    <p>Cookie clicker</p>
                 </a>
                 <a href="Javascript/js.html" target="”_blank”">
-                    <h7>Mail</h7>
+                    <p>Mail</p>
                 </a>
-</h2>
+</h1>
 
 
 </body>
