--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main</title>
 </head>
 
 
 
-<h1>välkommen
+<h1> Välkommen!
     <link rel="stylesheet" href="index.css">
 
     <body>
-
         <a href="webb/index.html" target="”_blank”">
             <p>Webbens historia</p>
 
@@ -30,7 +29,7 @@
                     <p>Cookie clicker</p>
                 </a>
                 <a href="Javascript/js.html" target="”_blank”">
-                    <p>Mail</p>
+                    <p>Mail Generator</p>
                 </a>
 </h1>
 
