--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="Javascript/js.html" target="”_blank”">
                     <p>Mail Generator</p>
                 </a>
+                <a href="blog/index.html" target="”_blank”">
+                    <p>Blogg</p>
+                </a>
 </h1>
 
 
