--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="index.css">
 
     <body>
+        <div class="div">
         <a href="webb/index.html" target="”_blank”">
             <p>Webbens historia</p>
 
@@ -34,8 +35,9 @@
                 <a href="blog/index.html" target="”_blank”">
                     <p>Blogg</p>
                 </a>
-</h1>
 
+</h1>
+</div>
 
 </body>
 
