--- a/index.html
+++ b/index.html
@@ -5,64 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
-</head>
-
-
-
-<h1> Välkommen!
-    <link rel="stylesheet" href="index.css">
-
-    <body>
-        <div class="div">
-        <a href="webb/index.html" target="”_blank”">
-            <p>Webbens historia</p>
-
-            <a href="pixar/pixar.html" target="”_blank”">
-                <p>Pixar</p>
-
-                <a href="favoriter/index.html" target="”_blank”">
-                    <p>Favorit media</p>
-                </a>
-                <a href="Recept/recept.html" target="”_blank”">
-                    <p>Recept</p>
-                </a>
-                <a href="Javascript/index.html" target="”_blank”">
-                    <p>Cookie clicker</p>
-                </a>
-                <a href="Javascript/js.html" target="”_blank”">
-                    <p>Mail Generator</p>
-                </a>
-                <a href="blog/index.html" target="”_blank”">
-                    <p>Blogg</p>
-                </a>
-
-</h1>
-</div>
-
-</body>
-
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="wrapper">
-        <div class="cube">
-            <div class="side front"></div>
-            <div class="side back"></div>
-            <div class="side top"></div>
-            <div class="side bottom"></div>
-            <div class="side left"></div>
-            <div class="side right"></div>
-        </div>
+    <h1>Välkommen!</h1>
+    <div class="links-container">
+        <a href="webb/index.html" target="_blank">Webbens historia</a>
+        <a href="pixar/pixar.html" target="_blank">Pixar</a>
+        <a href="favoriter/index.html" target="_blank">Favorit media</a>
+        <a href="Recept/recept.html" target="_blank">Recept</a>
+        <a href="Javascript/index.html" target="_blank">Cookie clicker</a>
+        <a href="Javascript/js.html" target="_blank">Mail Generator</a>
+        <a href="blog/index.html" target="_blank">Blogg</a>
     </div>
 </body>
 
