--- a/Recept/recept.html
+++ b/Recept/recept.html
@@ -26,8 +26,7 @@
         </ul>
         <p>Blanda allt, grädda i 175°C, 15-20 min.</p>
 
-        <img src="https://files-aller-blogger-platform.aws.aller.com/uploads/sites/87/2024/10/kladdkaka_med_chokladganache_och_flingsalt-6.jpg?w=850&fit=max&auto=format%201x"
-            alt="">
+<img src="https://files-aller-blogger-platform.aws.aller.com/uploads/sites/87/2024/10/kladdkaka_med_chokladganache_och_flingsalt-6.jpg?w=850&fit=max&auto=format%201x" alt="">
         <h2>Chokladkaka</h2>
         <ul>
             <li>150 g smör</li>
@@ -40,8 +39,7 @@
         </ul>
         <p>Blanda allt, grädda i 175°C, 30-35 min.</p>
         </section>
-        <img src="https://images.arla.com/recordid/6C9111DD-B730-494A-A7FCF44B20E1A764/chokladkaka.jpg?format=jpg&width=1269&height=715&mode=crop&crop=(0,0,0,%E2%88%92148)"
-            alt="">
+        <img src="https://images.arla.com/recordid/6C9111DD-B730-494A-A7FCF44B20E1A764/chokladkaka.jpg?format=jpg&width=1269&height=715&mode=crop&crop=(0,0,0,%E2%88%92148)" alt="">
     </main>
     <footer>
         <p>NUH UHH</p>
