--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="Javascript/index.html" target="_blank">Cookie clicker</a>
         <a href="Javascript/js.html" target="_blank">Mail Generator</a>
         <a href="blog/index.html" target="_blank">Blogg</a>
+        <a href="Nyhetssida/index.html"target="_blank">Nyhetssida</a>
     </div>
 </body>
 
