--- a/Nyhetssida/article1.html
+++ b/Nyhetssida/article1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormsvepet drabbar södra Sverige</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -12,15 +12,17 @@
             <h1>Nyhetssidan</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">home</a></li>
+                    <li><a href="index.html" class="nav-link">Hem</a></li>
+                    <li><a href="about.html" class="nav-link">Om oss</a></li>
+                    <li><a href="contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-<img src="" alt="">
     <main>
         <div class="container">
             <article class="full-article">
+                <img src="bilder/regn.jpg" alt="Storm över södra Sverige" class="article-image">
                 <h2>Stormsvepet drabbar södra Sverige</h2>
                 <p>Kraftiga vindar och stora regnmängder väntas drabba södra Sverige under helgen, enligt SMHIs senaste prognoser.</p>
                 <p>Stormen förväntas nå sina starkaste vindar under lördag kväll, och det kan även förekomma kraftiga åskväder.</p>
@@ -31,7 +33,6 @@
             </article>
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2025 Nyhetssidan inte förbehållna hehe.</p>
