--- a/Nyhetssida/article2.html
+++ b/Nyhetssida/article2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ny teknik revolutionerar sjukvården</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -12,15 +12,17 @@
             <h1>Nyhetssidan</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Hem</a></li>
+                    <li><a href="index.html" class="nav-link">Hem</a></li>
+                    <li><a href="about.html" class="nav-link">Om oss</a></li>
+                    <li><a href="contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main>
         <div class="container">
             <article class="full-article">
+                <img src="bilder/teknik.jpg" alt="Medical professional using advanced technology equipment in a modern hospital setting with bright lighting and a focused atmosphere" class="article-image">
                 <h2>Ny teknik revolutionerar sjukvården</h2>
                 <p>Forskare har utvecklat en banbrytande metod för tidig cancerupptäckt som kan förändra sjukvården för alltid.</p>
                 <p>Den nya tekniken använder avancerad AI för att analysera tester och ge läkare bättre diagnostiska verktyg.</p>
@@ -30,7 +32,6 @@
             </article>
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2024 Nyhetssidan. Alla rättigheter inte förbehållna.</p>
