--- a/Nyhetssida/article4.html
+++ b/Nyhetssida/article4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ny lag om arbetsmiljö träder i kraft</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -12,15 +12,17 @@
             <h1>Nyhetssidan</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Hem</a></li>
+                    <li><a href="index.html" class="nav-link">Hem</a></li>
+                    <li><a href="about.html" class="nav-link">Om oss</a></li>
+                    <li><a href="contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main>
         <div class="container">
             <article class="full-article">
+                <img src="bilder/sjukvard.jpg" alt="Several office workers collaborating at desks in a bright modern office with large windows and computers, creating a focused and productive atmosphere" class="article-image">
                 <h2>Ny lag om arbetsmiljö träder i kraft</h2>
                 <p>Regeringen har nyligen antagit en ny lag som syftar till att förbättra arbetsmiljön på svenska arbetsplatser.</p>
                 <p>Den nya lagen fokuserar på mental hälsa, ergonomi och säkerhet på arbetsplatsen och kräver att alla arbetsgivare genomför årliga riskbedömningar.</p>
@@ -30,7 +32,6 @@
             </article>
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2022 Nyhetssidan. Alla rättigheter förbehållna.</p>
