--- a/Nyhetssida/article3.html
+++ b/Nyhetssida/article3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotbollslandslaget till VM</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -12,15 +12,17 @@
             <h1>Nyhetssidan</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html">Hem</a></li>
+                    <li><a href="index.html" class="nav-link">Hem</a></li>
+                    <li><a href="about.html" class="nav-link">Om oss</a></li>
+                    <li><a href="contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main>
         <div class="container">
             <article class="full-article">
+                <img src="bilder/fotboll.jpg" alt="Fotbollslandslaget firar" class="article-image">
                 <h2>Fotbollslandslaget till VM</h2>
                 <p>Svenska landslaget har precis kvalificerat sig för VM 2024 efter en spännande match mot Danmark där de vann med 3-1.</p>
                 <p>Efter att ha kämpat genom hela kvalet är laget nu redo för nästa stora utmaning: VM i Qatar.</p>
@@ -30,7 +32,6 @@
             </article>
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2023 Nyhetssidan. Alla rättigheter kanske är förbehållna.</p>
