--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="Javascript/js.html" target="_blank">Mail Generator</a>
         <a href="blog/index.html" target="_blank">Blogg</a>
         <a href="Nyhetssida/index.html"target="_blank">Nyhetssida</a>
-        <a href="/gamestore/index.html"target="_blank">Gamestore</a>
+        <a href="gamestore/index.html"target="_blank">Gamestore</a>
     </div>
 </body>
 
