--- a/gamestore/other-products.html
+++ b/gamestore/other-products.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - GameStore</title>
+    <title>Other Products - GameStore</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <script src="add-to-cart.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="logo">GameStore</h1>
@@ -18,36 +19,36 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="other-products.html">Other products</a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="main-content">
+        <h2 style="text-align:center;">GameStore Merch & Accessories</h2>
         <div class="product-grid">
             <div class="product">
-                <a href="product-keyboard1.html">
-                    <img src="images/keyboard1.jpg" alt="Keyboard 1">
-                    <h4>Mechanical Keyboard</h4>
-                    <p>$99.99</p>
-                </a>
+                <img src="images/merch-shirt.jpg" alt="GameStore T-Shirt">
+                <h4>GameStore T-Shirt</h4>
+                <p>$24.99</p>
             </div>
             <div class="product">
-                <a href="product-mouse1.html">
-                    <img src="images/mouse1.jpg" alt="Gaming Mouse">
-                    <h4>Gaming Mouse</h4>
-                    <p>$49.99</p>
-                </a>
+                <img src="images/merch-mug.jpg" alt="GameStore Mug">
+                <h4>GameStore Mug</h4>
+                <p>$12.99</p>
             </div>
             <div class="product">
-                <a href="product-headset1.html">
-                    <img src="images/headset1.jpg" alt="Gaming Headset">
-                    <h4>Gaming Headset</h4>
-                    <p>$79.99</p>
-                </a>
+                <img src="images/merch-cap.jpg" alt="GameStore Cap">
+                <h4>GameStore Cap</h4>
+                <p>$19.99</p>
+            </div>
+            <div class="product">
+                <img src="images/sticker.jpg" alt="GameStore Sticker Pack">
+                <h4>Sticker Pack</h4>
+                <p>$6.99</p>
             </div>
         </div>
+        <p style="text-align:center; margin-top:2rem;">Show your love for gaming with our exclusive GameStore merch! Perfect for gifts or treating yourself.</p>
     </main>
 
     <footer class="footer">
