--- a/gamestore/product-headset1.html
+++ b/gamestore/product-headset1.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G733 Wireless Gaming Headset</title>
     <link rel="stylesheet" href="product-styles.css">
 </head>
+
 <body>
+    <script src="add-to-cart.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="logo">GameStore</h1>
@@ -28,14 +31,14 @@
             <div class="product-info">
                 <h2>G733 Wireless Gaming Headset</h2>
                 <p><strong>Price:</strong> $129.99</p>
-                <p>Stay immersed in your game with the Logitech G733, a lightweight wireless headset with incredible sound and style.</p>
+                <p>Stay immersed in your game with the Logitech G733, a lightweight wireless headset with incredible
+                    sound and style.</p>
                 <ul>
                     <li>Lightspeed wireless technology for low-latency audio.</li>
                     <li>Comfortable suspension headband for long gaming sessions.</li>
                     <li>Customizable RGB lighting with multiple effects.</li>
                     <li>Built-in Blue VO!CE microphone for studio-quality communication.</li>
                 </ul>
-                <button class="btn">Add to Cart</button>
             </div>
         </div>
     </main>
@@ -46,4 +49,5 @@
         </div>
     </footer>
 </body>
+
 </html>
