--- a/gamestore/product-keyboard1.html
+++ b/gamestore/product-keyboard1.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pro X TKL Rapid Keyboard</title>
     <link rel="stylesheet" href="product-styles.css">
 </head>
+
 <body>
+    <script src="add-to-cart.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="logo">GameStore</h1>
@@ -25,14 +28,14 @@
             <div class="product-info">
                 <h2>Pro X TKL Rapid Keyboard</h2>
                 <p><strong>Price:</strong> $149.99</p>
-                <p>Elevate your gaming setup with the Logitech Pro X TKL, a compact mechanical keyboard designed for speed and precision.</p>
+                <p>Elevate your gaming setup with the Logitech Pro X TKL, a compact mechanical keyboard designed for
+                    speed and precision.</p>
                 <ul>
                     <li>Hot-swappable switches for customizable performance.</li>
                     <li>Compact TKL layout for portability and space-saving.</li>
                     <li>Advanced RGB lighting with Logitech G HUB support.</li>
                     <li>Durable aluminum top plate for professional-level performance.</li>
                 </ul>
-                <button class="btn">Add to Cart</button>
             </div>
             <div class="product-image">
                 <img src="images/keyboard1.jpg" alt="Pro X TKL Rapid Keyboard">
@@ -42,8 +45,9 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 GameStore. All rights reserved.</p>
+            <p>&copy; 2025 GameStore. All rights are not reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
