--- a/gamestore/index.html
+++ b/gamestore/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameStore</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -15,6 +17,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="other-products.html">Other products</a></li>
+                    <li><a href="checkout.html">Checkout</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,5 +65,7 @@
             <p>&copy; 2025 GameStore. All rights are not reserved.</p>
         </div>
     </footer>
+    <script src="add-to-cart.js"></script>
 </body>
+
 </html>
