--- a/gamestore/product-mouse1.html
+++ b/gamestore/product-mouse1.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Superlight 2 Pro Gaming Mouse</title>
     <link rel="stylesheet" href="product-styles.css">
 </head>
+
 <body>
+    <script src="add-to-cart.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="logo">GameStore</h1>
@@ -28,22 +31,23 @@
             <div class="product-info">
                 <h2>Superlight 2 Pro Gaming Mouse</h2>
                 <p><strong>Price:</strong> $159.99</p>
-                <p>Dominate every match with the Logitech Superlight 2 Pro, a lightweight and ultra-responsive gaming mouse.</p>
+                <p>Dominate every match with the Logitech Superlight 2 Pro, a lightweight and ultra-responsive gaming
+                    mouse.</p>
                 <ul>
                     <li>Weighs less than 63 grams for lightning-fast movements.</li>
                     <li>Hero 2 sensor for unmatched precision and tracking.</li>
                     <li>PowerPlay wireless charging compatibility.</li>
                     <li>Zero-additive PTFE feet for smooth gliding.</li>
                 </ul>
-                <button class="btn">Add to Cart</button>
             </div>
         </div>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 GameStore. All rights reserved.</p>
+            <p>&copy; 2025 GameStore. All rights reserved or?.</p>
         </div>
     </footer>
 </body>
+
 </html>
